--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,11 +10,13 @@
     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 
     <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="../../public/assets/javascript/burgers.js"></script>
+
 </head>
 
 <body>
     {{{ body }}}
+
+    <script src="/assets/javascript/burgers.js"></script>
 </body>
 
 </html>
